Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       <div class="inner clearfix">
         <section id="main-content">
           <p>hellow</p>
+
+<hr>
+
+<ol>
+<li><img src="https://avatars3.githubusercontent.com/u/9568067" alt=""></li>
+</ol>
         </section>
 
         <aside id="sidebar">
